add html example
