# docs/swagger.yaml
@@ -108,6 +108,12 @@ paths:
       consumes:
       - '*/*'
       description: '[Process Description Specification](https://docs.ogc.org/is/18-062r2/18-062r2.html#sc_process_description)'
+      parameters:
+      - description: processID
+        in: path
+        name: processID
+        required: true
+        type: string
       produces:
       - application/json
       responses:
